# polymath

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  WIRING.md  vcpkg.json
firmware/cam-pi/: CMakeLists.txt  README.md  config.example.json
firmware/cam-pi/include/hearth_pi/: auth.h  detector.h  httpd.h  mqtt.h
firmware/cam-pi/src/: auth.cpp  config.cpp  detector.cpp  httpd.cpp  main.cpp  mqtt.cpp
firmware/cam-pi/systemd/: hearth-cam-pi.service
src/agent/: CMakeLists.txt  agent_loop.cpp  agent_loop.h  agent_runtime.cpp  agent_runtime.h  persona.cpp  persona.h  tool_registry.cpp  tool_registry.h  turn_collector.cpp  turn_collector.h
src/agent/skills/: skill.cpp  skill.h  skill_registry.cpp  skill_registry.h
src/agent/tools/: advisor_tools.cpp  advisor_tools.h  agent_session_tools.cpp  agent_session_tools.h  browser_drive.cpp  browser_drive.h  calc_tool.cpp  calc_tool.h  camera_tools.cpp  camera_tools.h  computer_tools.cpp  computer_tools.h  convert_tool.cpp  convert_tool.h  doc_rag.cpp  doc_rag.h  documents.cpp  documents.h  docx_writer.cpp  docx_writer.h  fetch_page.cpp  fetch_page.h  imap_tools.cpp  imap_tools.h  instrument_tool.cpp  instrument_tool.h  lab_session.cpp  lab_session.h  memory_tools.cpp  memory_tools.h  orchestration_tools.cpp  orchestration_tools.h  print.cpp  print.h  queue_tool.cpp  queue_tool.h  register_tools.cpp  reminders.cpp  reminders.h  schedule_tools.cpp  (+17 more)
src/app/: CMakeLists.txt  app_bridge.cpp  app_bridge.h  app_controller.cpp  app_controller.h  main.cpp
src/audio/: CMakeLists.txt  asr_whisper.cpp  asr_whisper.h  audio_common.h  audio_service.cpp  audio_service.h  capture.cpp  capture.h  network_audio_source.cpp  network_audio_source.h  onnx_util.cpp  onnx_util.h  tts_piper.cpp  tts_piper.h  vad.cpp  vad.h  wakeword.cpp  wakeword.h
src/core/: CMakeLists.txt  activity_log.cpp  activity_log.h  config.cpp  config.h  database.cpp  database.h  event_bus.cpp  event_bus.h  i_model_backend.h  i_tool.h  logging.cpp  logging.h  paths.cpp  paths.h  retention.cpp  retention.h  safety_policy.cpp  safety_policy.h  schema.h  service.h  single_instance.cpp  single_instance.h  types.h
src/desktop/: CMakeLists.txt  desktop_controller.cpp  desktop_controller.h  global_hotkey.cpp  global_hotkey.h  input_injector.cpp  input_injector.h  screen_capture.cpp  screen_capture.h  ui_automation.cpp  ui_automation.h
src/fabric/: CMakeLists.txt  device_registry.cpp  device_registry.h  fabric_service.cpp  fabric_service.h
src/gateway/: CMakeLists.txt  README.md  auth.cpp  auth.h  bridge.h  gateway_db.cpp  gateway_db.h  gateway_service.cpp  gateway_service.h  http_router.cpp  http_router.h  http_server.cpp  http_server.h  json_map.cpp  json_map.h  relay_client.cpp  relay_client.h  ws_hub.cpp  ws_hub.h
src/inference/: CMakeLists.txt  grammar.cpp  grammar.h  inference_manager.cpp  inference_manager.h  llama_backend.cpp  llama_backend.h  vram_budget.cpp  vram_budget.h
src/personality/: CMakeLists.txt  bundle_seed.cpp  bundle_seed.h  personality_manager.cpp  personality_manager.h
src/scheduler/: CMakeLists.txt  idle_detector.cpp  proactive_engine.cpp  proactive_engine.h  scheduler_stub.cpp  scheduler_util.cpp  scheduler_util.h  task_scheduler.cpp  task_scheduler.h
src/sessions/: CMakeLists.txt  agent_session_service.cpp  agent_session_service.h  i_agent_provider.h
src/sessions/providers/: claude_code_provider.cpp  claude_code_provider.h  claude_stream_parse.cpp  claude_stream_parse.h  codex_provider.cpp  codex_provider.h  generic_pty_provider.cpp  generic_pty_provider.h
src/ui/: CMakeLists.txt  camera_image_provider.cpp  camera_image_provider.h  settings_controller.cpp  settings_controller.h  web_adblock_interceptor.cpp  web_adblock_interceptor.h
src/ui/models/: camera_model.cpp  camera_model.h  chat_model.cpp  chat_model.h  instrument_model.cpp  instrument_model.h  lab_model.cpp  lab_model.h  notifications_model.cpp  notifications_model.h  personality_model.cpp  personality_model.h  sessions_model.cpp  sessions_model.h  shopping_model.cpp  shopping_model.h  task_model.cpp  task_model.h  timeline_model.cpp  timeline_model.h
src/ui/qml/: AgentSessionsView.qml  CamerasView.qml  ChatView.qml  CommandPalette.qml  ConfirmDialog.qml  ControlOverlay.qml  Dashboard.qml  LabView.qml  Main.qml  MemoryView.qml  MobileAccessView.qml  ModelManagerView.qml  Nav.qml  NotificationBell.qml  NotificationCenter.qml  PanelMode.qml  PersonalitiesView.qml  PersonalityEditor.qml  PrivacyView.qml  QuickAsk.qml  SettingsSection.qml  SettingsView.qml  ShoppingView.qml  Style.qml  SurfaceHost.qml  TaskQueueView.qml  TimelineView.qml  ToastStack.qml  qrcode.js
src/ui/qml/controls/: EmptyState.qml  GlassCard.qml  GlassPanel.qml  GlassSurface.qml  PersonalityAvatar.qml  PmBadge.qml  PmButton.qml  PmCheckBox.qml  PmComboBox.qml  PmDialog.qml  PmIcon.qml  PmIconButton.qml  PmItemDelegate.qml  PmPill.qml  PmScrollBar.qml  PmSectionHeader.qml  PmSlider.qml  PmStatusDot.qml  PmSwitch.qml  (+3 more)
src/ui/tools/: capture_views.cpp
src/vision/: CMakeLists.txt  camera_worker.cpp  camera_worker.h  detector_yolo.cpp  detector_yolo.h  face_arcface.cpp  face_arcface.h  finder.cpp  finder.h  motion.cpp  motion.h  vision_service.cpp  vision_service.h  visual_memory.cpp  visual_memory.h
tests/: CMakeLists.txt  test_adblock.cpp  test_agent_e2e.cpp  test_audio_e2e.cpp  test_core.cpp  test_desktop.cpp  test_doc_rag.cpp  test_f2_youtube_tts.cpp  test_fabric.cpp  test_goals.cpp  test_harness.h  test_harness_e2e.cpp  test_inference_e2e.cpp  test_instruments.cpp  test_integration_e2e.cpp  test_j_phase2_e2e.cpp  test_lab_session.cpp  test_memory_e2e.cpp  test_personality.cpp  test_privacy_e2e.cpp  test_router.cpp  test_safety_policy.cpp  test_scheduler_v2.cpp  test_sessions_e2e.cpp  test_skills.cpp  test_system_tools.cpp  test_tools.cpp  test_ui_e2e.cpp  test_vision_e2e.cpp  test_youtube_search.cpp
tests/fixtures/: youtube_search.json
tests/fixtures/sessions/: error.jsonl  needs_input.jsonl  simple_result.jsonl
(+258 files in other folders)
